@@ -2,12 +2,15 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form>
-    <label name="name"/>
-    <field name="name"/>
-    <label name="sequence"/>
-    <field name="sequence"/>
-    <label name="module"/>
-    <field name="module"/>
-    <label name="path"/>
-    <field name="path"/>
+    <image name="name" xexpand="0"/>
+    <group id="form">
+        <label name="name"/>
+        <field name="name"/>
+        <label name="sequence"/>
+        <field name="sequence"/>
+        <label name="module"/>
+        <field name="module"/>
+        <label name="path"/>
+        <field name="path"/>
+    </group>
 </form>
